# cyber-dad-joke-machine

./: .env.example  .gitignore  Cargo.toml  README.md  Shuttle.toml  index.html  package-lock.json  package.json
.shuttle/: config.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/: JokeButton.tsx  JokeDisplay.tsx  RecentJokes.tsx  Settings.tsx
frontend/src/pages/: Index.tsx
frontend/src/services/: jokeService.ts
frontend/src/utils/: dateUtils.ts  storage.ts
migrations/: 20250315000000_create_jokes_table.sql
src/: config.rs  index.css  main.rs  state.rs
src/components/: JokeDisplay.tsx
src/pages/: Index.tsx
src/services/: jokeService.ts
src/utils/: storage.ts
