[package]
name = "cyber-dad-joke-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3.0", features = ["cors"] }
rand = "0.8"
async-openai = "0.14.3"
dotenv = "0.15.0"
config = "0.13.3"
