[package]
name = "cyber-dad-joke-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.28.0"
axum = "0.7.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shuttle-axum = { version = "0.53.0", default-features = false, features = [
  "axum-0-7",
] }
shuttle-openai = "0.53.0"
shuttle-runtime = { version = "0.53.0", features = ["setup-otel-exporter"] }
shuttle-shared-db = { version = "0.53.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = [
  "macros",
  "postgres",
  "time",
], default-features = false }
time = { version = "0.3.32", features = ["serde"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.40"
